// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks accessibility of Button (Button.Action.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Anchor.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Command.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.CommandBar.Example) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\" class=\\"ms-Button root-16\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".root-16",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".root-16",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
]
`;

exports[`checks accessibility of Button (Button.Compound.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.ContextualMenu.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Default.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Icon.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Primary.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.ScreenReader.Example) 1`] = `Array []`;

exports[`checks accessibility of Button (Button.Split.Example) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-10\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "div:nth-child(1) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription",
      "text": "Fix all of the following: ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "div:nth-child(1) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
      "ruleId": "aria-allowed-attr",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-allowed-attr",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-10\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "div:nth-child(2) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription",
      "text": "Fix all of the following: ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "div:nth-child(2) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
      "ruleId": "aria-allowed-attr",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-allowed-attr",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-10\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "div:nth-child(3) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription",
      "text": "Fix all of the following: ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "div:nth-child(3) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"]",
      "ruleId": "aria-allowed-attr",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-allowed-attr",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" aria-disabled=\\"true\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-36\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".css-36",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription",
      "text": "Fix all of the following: ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".css-36",
      "ruleId": "aria-allowed-attr",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-allowed-attr",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\" class=\\"ms-Button root-26\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "div:nth-child(2) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"] > span > .root-26",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "div:nth-child(2) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"] > span > .root-26",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\" class=\\"ms-Button root-26\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "div:nth-child(3) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"] > span > .root-26",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "div:nth-child(3) > .css-10[data-is-focusable=\\"true\\"][role=\\"button\\"] > span > .root-26",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\" class=\\"ms-Button is-disabled root-38\\" aria-disabled=\\"true\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".root-38",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".root-38",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
]
`;

exports[`checks accessibility of Button (Button.Split.Example) 2`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-10\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".css-10",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription",
      "text": "Fix all of the following: ARIA attribute is not widely supported in screen readers and assistive technologies:  aria-roledescription.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".css-10",
      "ruleId": "aria-allowed-attr",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-allowed-attr",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<div data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" data-is-focusable=\\"true\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" class=\\"css-10\\" tabindex=\\"0\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".css-10",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- Element is in tab order and does not have accessible text

Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix all of the following: Element is in tab order and does not have accessible text. Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".css-10",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" data-automation-id=\\"test\\" aria-roledescription=\\"split button\\" class=\\"ms-Button ms-Button--icon root-1\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".ms-Button--icon",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".ms-Button--icon",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<button type=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" data-is-focusable=\\"false\\" tabindex=\\"-1\\" class=\\"ms-Button root-16\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".root-16",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has a value attribute and the value attribute is empty
- Element has no value attribute or the value attribute is empty
- Element does not have inner text that is visible to screen readers
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Element's default semantics were not overridden with role=\\"presentation\\"
- Element's default semantics were not overridden with role=\\"none\\"
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: Element has a value attribute and the value attribute is empty. Element has no value attribute or the value attribute is empty. Element does not have inner text that is visible to screen readers. aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Element's default semantics were not overridden with role=\\"presentation\\". Element's default semantics were not overridden with role=\\"none\\". Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".root-16",
      "ruleId": "button-name",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "button-name",
  },
]
`;

exports[`checks accessibility of Button (Button.Toggle.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.Basic.Example) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField12\\" required=\\"\\" value=\\"\\" class=\\"ms-TextField-field field-6\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField12",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Form element does not have an implicit (wrapped) &lt;label>
- Form element does not have an explicit &lt;label>
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Form element does not have an implicit (wrapped) <label>. Form element does not have an explicit <label>. Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField12",
      "ruleId": "label",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label",
  },
]
`;

exports[`checks accessibility of TextField (TextField.Borderless.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.Controlled.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.CustomRender.Example) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField2\\" aria-labelledby=\\"TextFieldLabel4\\" value=\\"\\" class=\\"ms-TextField-field field-4\\" aria-describedby=\\"TextFieldDescription3\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField2",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- Invalid ARIA attribute value: aria-labelledby=\\"TextFieldLabel4\\"",
      "text": "Fix all of the following: Invalid ARIA attribute value: aria-labelledby=\\"TextFieldLabel4\\".",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField2",
      "ruleId": "aria-valid-attr-value",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "aria-valid-attr-value",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField2\\" aria-labelledby=\\"TextFieldLabel4\\" value=\\"\\" class=\\"ms-TextField-field field-4\\" aria-describedby=\\"TextFieldDescription3\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField2",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix all of the following:
- Only title used to generate label for form element",
      "text": "Fix all of the following: Only title used to generate label for form element.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField2",
      "ruleId": "label-title-only",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label-title-only",
  },
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<input type=\\"text\\" id=\\"TextField2\\" aria-labelledby=\\"TextFieldLabel4\\" value=\\"\\" class=\\"ms-TextField-field field-4\\" aria-describedby=\\"TextFieldDescription3\\" aria-invalid=\\"false\\">",
            },
          },
        ],
        "fullyQualifiedLogicalName": "#TextField2",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- aria-label attribute does not exist or is empty
- aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
- Form element does not have an implicit (wrapped) &lt;label>
- Form element does not have an explicit &lt;label>
- Element has no title attribute or the title attribute is empty",
      "text": "Fix any of the following: aria-label attribute does not exist or is empty. aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty. Form element does not have an implicit (wrapped) <label>. Form element does not have an explicit <label>. Element has no title attribute or the title attribute is empty.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": "#TextField2",
      "ruleId": "label",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "label",
  },
]
`;

exports[`checks accessibility of TextField (TextField.ErrorMessage.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.Masked.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.Multiline.Example) 1`] = `Array []`;

exports[`checks accessibility of TextField (TextField.PrefixAndSuffix.Example) 1`] = `
Array [
  Object {
    "level": "error",
    "locations": Array [
      Object {
        "annotations": Array [
          Object {
            "snippet": Object {
              "text": "<span style=\\"padding-bottom:1px\\">https://</span>",
            },
          },
        ],
        "fullyQualifiedLogicalName": ".prefix-15 > span",
        "physicalLocation": Object {
          "fileLocation": Object {
            "uri": "about:blank",
          },
        },
      },
    ],
    "message": Object {
      "richText": "Fix any of the following:
- Element has insufficient color contrast of 2.21 (foreground color: #a6a6a6, background color: #f4f4f4, font size: 10.5pt, font weight: normal). Expected contrast ratio of 4.5:1",
      "text": "Fix any of the following: Element has insufficient color contrast of 2.21 (foreground color: #a6a6a6, background color: #f4f4f4, font size: 10.5pt, font weight: normal). Expected contrast ratio of 4.5:1.",
    },
    "partialFingerprints": Object {
      "fullyQualifiedLogicalName": ".prefix-15 > span",
      "ruleId": "color-contrast",
    },
    "properties": Object {
      "tags": Array [
        "Accessibility",
      ],
    },
    "ruleId": "color-contrast",
  },
]
`;

exports[`checks accessibility of TextField (TextField.Styled.Example) 1`] = `Array []`;
